--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,8 @@
         "mongoose": "^8.7.0",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
-        "nodemon": "^3.1.7"
+        "nodemon": "^3.1.7",
+        "pg": "^8.13.1"
     },
     "devDependencies": {
         "@eslint/js": "^8.56.0",
