--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
     "name": "e-commerce-backend",
     "version": "1.0.0",
-    "main": "index.js",
+    "main": "backend/server.js",
     "type": "module",
     "scripts": {
-        "start": "node index.js",
-        "dev": "nodemon index.js",
-        "prepare": "husky install",
+        "start": "node backend/src/server.js",
+        "dev": "nodemon backend/src/server.js",
         "format": "prettier --write \"**/*.{js,json,md}\"",
         "lint": "eslint . --ext js --report-unused-disable-directives --max-warnings 0",
         "lint:fix": "eslint . --fix"
@@ -25,11 +24,10 @@
         "express-async-handler": "^1.2.0",
         "express-formidable": "^1.2.0",
         "jsonwebtoken": "^9.0.2",
-        "mongodb": "^6.9.0",
-        "mongoose": "^8.7.0",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
-        "nodemon": "^3.1.7"
+        "nodemon": "^3.1.7",
+        "pg": "^8.13.1"
     },
     "devDependencies": {
         "@eslint/js": "^8.56.0",
