--- a/backend/package.json
+++ b/backend/package.json
@@ -23,13 +23,15 @@
         "express": "^4.21.0",
         "express-async-handler": "^1.2.0",
         "express-formidable": "^1.2.0",
+        "googleapis": "^144.0.0",
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.9.0",
         "mongoose": "^8.7.0",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
         "nodemon": "^3.1.7",
-        "pg": "^8.13.1"
+        "pg": "^8.13.1",
+        "redis": "^4.7.0"
     },
     "devDependencies": {
         "@eslint/js": "^8.56.0",
