--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
         "nodemon": "^3.1.7",
+        "pdf-parse": "^1.1.1",
         "pg": "^8.13.1",
         "redis": "^4.7.0"
     },
