--- a/backend/.envtemplate
+++ b/backend/.envtemplate
@@ -1,2 +1,20 @@
 PORT=
-MONGO_URI=
+
+DB_USER=
+DB_HOST=
+DB_NAME=
+DB_PASSWORD=
+DB_PORT=
+
+DB_POOL_SIZE=
+
+NODE_ENV=
+
+#JSON Web Tokens
+ACCESS_TOKEN_SECRET=
+
+#Google drive API
+CLIENT_EMAIL=
+PRIVATE_KEY=
+SCOPE=
+FOLDER_ID=
