--- a/backend/package.json
+++ b/backend/package.json
@@ -1,55 +1,64 @@
 {
-    "name": "e-commerce-backend",
-    "version": "1.0.0",
-    "main": "index.js",
-    "type": "module",
-    "scripts": {
-        "start": "node index.js",
-        "dev": "nodemon index.js",
-        "format": "prettier --write \"**/*.{js,json,md}\"",
-        "lint": "eslint . --ext js --report-unused-disable-directives --max-warnings 0",
-        "lint:fix": "eslint . --fix"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "description": "",
-    "dependencies": {
-        "bcryptjs": "^2.4.3",
-        "colors": "^1.4.0",
-        "cookie-parser": "^1.0.0",
-        "cors": "^2.8.5",
-        "dotenv": "^16.4.5",
-        "express": "^4.21.0",
-        "express-async-handler": "^1.2.0",
-        "express-formidable": "^1.2.0",
-        "googleapis": "^144.0.0",
-        "jsonwebtoken": "^9.0.2",
-        "mongodb": "^6.9.0",
-        "mongoose": "^8.7.0",
-        "morgan": "^1.10.0",
-        "multer": "^1.4.5-lts.1",
-        "nodemon": "^3.1.7",
-        "pdf-lib": "^1.17.1",
-        "pg": "^8.13.1"
-    },
-    "devDependencies": {
-        "@eslint/js": "^8.56.0",
-        "eslint": "^8.56.0",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.2.1",
-        "globals": "^13.24.0",
-        "husky": "^8.0.0",
-        "lint-staged": "^15.2.0",
-        "prettier": "^3.2.5"
-    },
-    "lint-staged": {
-        "*.js": [
-            "eslint --fix",
-            "prettier --write"
-        ],
-        "*.{json,md}": [
-            "prettier --write"
-        ]
-    }
+  "name": "e-commerce-backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "format": "prettier --write \"**/*.{js,json,md}\"",
+    "lint": "eslint . --ext js --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --fix",
+    "seed": "node src/services/seeders/index.js",
+    "seed:dev": "node src/services/seeders/index.js",
+    "seed:prod": "node src/services/seeders/index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "@aws-sdk/client-s3": "^3.700.0",
+    "@aws-sdk/lib-storage": "^3.700.0",
+    "@aws-sdk/s3-request-presigner": "^3.700.0",
+    "@faker-js/faker": "^9.2.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
+    "cookie-parser": "^1.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "express-async-handler": "^1.2.0",
+    "express-formidable": "^1.2.0",
+    "googleapis": "^144.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.7.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.7",
+    "pdf-lib": "^1.17.1",
+    "pg": "^8.13.1",
+    "sharp": "^0.33.5"
+  },
+  "devDependencies": {
+    "@eslint/js": "^8.56.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^13.24.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.2.5"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ]
+  }
 }
